# HopsonCraft

./: .gitignore  Block_Type - Shortcut.lnk  CMakeLists.txt  CODESTYLE.md  Controls.txt  IMPLEMENTATION.md  License.txt  Loader.h  MattCraft.cbp  MattCraft.cscope_file_list  Mesh gen Test.cbp  Minecraft.cbp  Project - Shortcut.lnk  README.md  ValgrindOut.xml  gmon.out  premake5.lua  simplegen.txt
Data/: Settings.txt  cool data 2.txt  cool data 3.txt  cool data 4.txt  cool data 5.txt  cool data 6.txt  cool data.txt
Data/Blocks/: Air.block  Air.json  Bedrock.block  Cactus.block  Cobblestone.block  Coral.block  Dead_Shrub.block  Dirt.block  Dirt.json  Glass.block  Glow_Stone.block  Grass.block  Grass.json  HopsonCraft V4 - Shortcut.lnk  Oak_Leaf.block  Oak_Leaf.json  Oak_Plank.block  Oak_Sapling.block  Oak_Wood.block  Oak_Wood.json  Rose.block  Rose.json  Sand.block  Sand.json  Snow.block  Snow.json  Snow_Grass.block  Stone.block  Stone.json  Stone_Bricks.block  TNT.block  Tall_Grass.block  Tall_Grass.json  Water.block  Water.json  _Example.block
Data/Images/: Block_Atlas.pdn
Data/Shaders/: Block_Fragment.glsl  Flora_Fragment.glsl  Flora_Vertex.glsl  Liquid_Vertex.glsl  Simple_Fragment.glsl  Simple_Vertex.glsl  SkyBox_Fragment.glsl  SkyBox_Vertex.glsl  Solid_Fragment.glsl  Solid_Vertex.glsl
Project Debug/Shaders/: Vertex.glsl
Shaders/: Basic_Fragment_Shader.glsl  Basic_Vertex_Shader.glsl  Blue_Fragment.glsl  Blue_Vertex.glsl  Blur_Fragment.glsl  ChunkFrag.glsl  ChunkVert.glsl  Chunk_Fragment.glsl  Flora_Fragment.glsl  Flora_Vertex.glsl  Fragment.glsl  Ground_Fragment.glsl  Ground_Vertex.glsl  Simple_Fragment.glsl  Simple_Vertex.glsl  Sky_Box_Fragment.glsl  Sky_Box_Vertex.glsl  Vertex.glsl  Water_Fragment.glsl  Water_Vertex.glsl
Shaders/Chunk_Shaders/: Flora_Fragment.glsl  Flora_Vertex.glsl  Ground_Fragment.glsl  Ground_Vertex.glsl  Water_Fragment.glsl  Water_Vertex.glsl
Source/: AABB.cpp  AABB.h  Application.cpp  Application.h  Biome.cpp  Biome.h  Block.cpp  Block.h  Body.cpp  Body.h  Camera.cpp  Camera.h  Chunk.cpp  Chunk.h  Chunk_Block_Gen.cpp  Chunk_Map.cpp  Chunk_Map.h  Crosshair.cpp  Crosshair.h  D_Settings.h  Dirt_Block.cpp  Display.cpp  Display.h  Entity.h  FPS.cpp  FPS.h  Glm_Common.h  Grass_Block.h  Height_Generator.cpp  Height_Generator.h  Loader.cpp  Loader.h  Main.cpp  Matrix_Math.cpp  Matrix_Math.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  ModelCoords.cpp  (+24 more)
Source/Block/: Air.cpp  Air.h  Block.cpp  Block.h  Block_Location.cpp  Block_Location.h  D_Blocks.cpp  D_Blocks.h  Dirt.cpp  Dirt.h  E_Block_ID.h  E_Block_Physical_State.h  E_Block_Type.h  Grass.cpp  Grass.h  Oak_Leaf.h  Sand.cpp  Sand.h  Stone.cpp  Stone.h
Source/Blocks/: Blocks.h  Dirt_Block.cpp  Dirt_Block.h  Grass_Block.cpp  Stone_Block.cpp  Stone_Block.h
Source/Chunk/: Block_Generator.cpp  Chunk.cpp  Chunk.h  Chunk_Biome.cpp  Chunk_Biome.h  Chunk_Block_Gen.cpp  Chunk_Blocks.cpp  Chunk_Blocks.h  Chunk_Generator.cpp  Chunk_Layer.cpp  Chunk_Layer.h  Chunk_Location.cpp  Chunk_Location.h  Chunk_Map.cpp  Chunk_Map.h  Chunk_Mesh.cpp  Chunk_Mesh.h  Chunk_Position.cpp  Chunk_Position.h
Source/Entity/: Cube.h  Entity.cpp  Entity.h
Source/File/: Chunklet_File.cpp  Chunklet_File.h  Loadable.h  World_File.cpp  World_File.h
Source/GUI/: Background.cpp  Background.h  BasicButton.cpp  BasicButton.h  Button.cpp  Button.h  Component.cpp  Component.h  Dropdown.cpp  Dropdown.h  GUI.h  Image.cpp  Image.h  Imaged_Button.cpp  Imaged_Button.h  Menu.cpp  Menu.h  Panel.cpp  Panel.h  Panel_Section.h  Text_Box.cpp  Text_Box.h  (+3 more)
Templates/: Block_template.txt  Shader_template.txt  State_template.txt
Worlds/: World_Names.txt  seeds.txt
cmake_modules/: FindSFML.cmake
(+639 files in other folders)
